<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetingText"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login"
        android:layout_marginVertical="30sp"
        />
    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginText"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="100sp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordText"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="100sp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/enterButton"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/enterButton"
        android:textSize="20sp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/myInfo" />

</RelativeLayout>