<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SquareActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kvMetr">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:id="@+id/kvMetr"
            android:hint="0"
            >

        </EditText>






    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kvKilo">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:id="@+id/kvKilo"
            android:hint="0"
            >

        </EditText>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gektar">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:id="@+id/gektar"
            android:hint="0"
            android:inputType="number">

        </EditText>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acr">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:id="@+id/acr"
            android:hint="0"
            android:inputType="number">

        </EditText>



    </LinearLayout>





</LinearLayout>