<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SpeedActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kmChas">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:id="@+id/kmChas"
        android:hint="0"
        >

    </EditText>






  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metrSec">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:id="@+id/etMetrSec"
        android:hint="0"
        >

    </EditText>



  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kmSec">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:id="@+id/kmSec"
        android:hint="0"
        android:inputType="number">

    </EditText>



  </LinearLayout>







</LinearLayout>