<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/imageWeight"
        android:layout_width="174dp"
        android:layout_height="162dp"
        android:layout_marginTop="20sp"
        android:layout_weight="1"
        app:srcCompat="@drawable/baseline_backpack_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageWeight"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:text="@string/weight"
        android:textSize="20sp">

    </TextView>

</RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageLenght"
                android:layout_width="174dp"
                android:layout_height="162dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="19dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_horizontal_rule_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageLenght"
                android:layout_alignParentEnd="true"

                android:gravity="center"
                android:text="@string/length"
                android:textSize="20sp">

            </TextView>

        </RelativeLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/imageSquare"
                android:layout_width="174dp"
                android:layout_height="162dp"
                android:layout_marginTop="20sp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_crop_square_24"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageSquare"
                android:layout_marginTop="2dp"
                android:text="@string/square"
                android:textSize="20sp">

            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageSpeed"
                android:layout_width="174dp"
                android:layout_height="162dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="19dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_speed_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageSpeed"
                android:layout_alignParentEnd="true"

                android:gravity="center"
                android:text="@string/speed"
                android:textSize="20sp">

            </TextView>

        </RelativeLayout>




    </LinearLayout>


</LinearLayout>





</RelativeLayout>